# doughnut-watcheye

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt  seed_data.sql  streamlit_app.py
.streamlit/: config.toml
config/: config.example.yaml  products.yaml
migrations/: env.py
src/watcheye/: __init__.py  cli.py  config.py
src/watcheye/cloner/: __init__.py  generator.py
src/watcheye/collector/: apify_client.py  base.py  facebook.py  instagram.py  reddit.py  x_twitter.py  xiaohongshu.py
src/watcheye/research/: competitors.py
src/watcheye/scorer/: engagement.py
src/watcheye/storage/: database.py  media.py  models.py
src/watcheye/web/: app.py
tests/: conftest.py  test_cli.py  test_cloner.py  test_collectors.py  test_config.py  test_models.py  test_scorer.py  test_wizard.py
